[metadata]
name = pubtools
author = David Stansby
author_email =
license = Other
url = https://github.com/dstansby/publication-tools
description =
long_description = file: README.md

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
pubtools = data/*

[tool:pytest]
testpaths = "pubtools" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  pubtools/__init*
  pubtools/conftest.py
  pubtools/*setup_package*
  pubtools/tests/*
  pubtools/*/tests/*
  pubtools/extern/*
  pubtools/version*
  */pubtools/__init*
  */pubtools/conftest.py
  */pubtools/*setup_package*
  */pubtools/tests/*
  */pubtools/*/tests/*
  */pubtools/extern/*
  */pubtools/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
